@startuml
'https://plantuml.com/class-diagram

class MyStream<T>{
    + void addListenner(MyStreamListenner listener)
    + void addEvent(T t)
}
class MyClient
interface MyStreamListenner<T>{
    void listen(T t)
}
class DataAccess{
    - List<MonHoc> list
    + void add(MonHoc m)
    + void update(MonHoc m)
    + void delete(String id)
}
MyStreamListenner <..MyClient
MyStream o--> MyStreamListenner : listenners
MyClient --> MyStream : stream
DataAccess --> MyStream : stream
note left of MyStream
    Dấu o để khi xoá stream ko xoá MyClient
    Thành phần DataAccess dùng để demo
end note
@enduml